src/objects/APTS_Recipe_Details__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Consumption_Group_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consumption Group Detail</label>
        <referenceTo>APTS_Consumption_Group_Detail__c</referenceTo>
        <relationshipLabel>Recipe Details</relationshipLabel>
        <relationshipName>Recipe_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Cup_Size__c</fullName>
        <label>Cup Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Flavor_Profile__c</fullName>
        <label>Flavor Profile</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_G10_Grammage__c</fullName>
        <label>G10 Grammage</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_G1_Grammage__c</fullName>
        <label>G1 Grammage</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_G2_Grammage__c</fullName>
        <label>G2 Grammage</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Recipe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipe</label>
        <referenceTo>APTS_Recipe_Master__c</referenceTo>
        <relationshipLabel>Recipe Details</relationshipLabel>
        <relationshipName>Recipe_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Recipe Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_Consumption_Group_Detail__c</columns>
        <columns>APTS_Recipe__c</columns>
        <columns>APTS_G1_Grammage__c</columns>
        <columns>APTS_G2_Grammage__c</columns>
        <columns>APTS_G3_Grammage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RD-{00000000}</displayFormat>
        <label>Recipe Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipe Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>